Fixed hover over colour contrast for a

--- a/_includes/css/main.scss
+++ b/_includes/css/main.scss
@@ -36,7 +36,7 @@ a {
   text-decoration: underline;
 
   &:hover {
-    background-color: lighten($accent, 20%);
+    background-color: lighten($accent, 25%);
   }
 }
 
@@ -88,6 +88,7 @@ footer,
   a.navbar-item {
     background-color: $primary;
     padding: 1.5rem 1rem 1.25rem;
+    text-decoration: none;
     // @include touch {
     //   background-color: $primary;
     // }
